--- a/src/services/templates/verify_email.html
+++ b/src/services/templates/verify_email.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Password Reset</title>
+    <title>Verify your email</title>
   </head>
   <body>
     <p>Hi {{username}},</p>
